@@ -1,3 +1,10 @@
+2008-03-25  Tyler Romeo  <tylerromeo@gmail.com>
+
+	Add bootstrap file to automatically import all modules.
+
+	*app/views/Common.py (ShellMenu): Removing printing of new lines (formatting error).
+	*app/views/Common.py (QuestionList): Same as above.
+
 2008-03-24  Tyler Romeo  <tylerromeo@gmail.com>
 
 	Added view for Main Menu.
